...
            </objects>
            <point key="canvasLocation" x="-326.08695652173918" y="741.84782608695662"/>
        </scene>
        <!--Search-->
        <scene sceneID="92e-2a-3Ds">
            <objects>
                <viewController title="Search" id="44f-rS-0He" customClass="SearchViewController" customModule="KeepUp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="IDD-M5-YbI">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="687"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Rxd-WE-Hfm">
                                <rect key="frame" x="0.0" y="64" width="414" height="623"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <color key="separatorColor" red="0.95294117649999999" green="0.38431372549999998" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Enter Artist Name" id="Nrz-at-mWu">
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <color key="barTintColor" red="1" green="0.40453805397881215" blue="0.19601865358545467" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <textInputTraits key="textInputTraits"/>
                                    <connections>
                                        <outlet property="delegate" destination="44f-rS-0He" id="jVq-6n-Xh8"/>
...
                                                <rect key="frame" x="8" y="11" width="391" height="39"/>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="391" id="lHE-cI-QGF"/>
                                                </constraints>
                                                <attributedString key="attributedText">
                                                    <fragment content="Top Artists">
                                                        <attributes>
                                                            <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            <font key="NSFont" size="24" name="SFCompactText-Bold"/>
                                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                        </attributes>
                                                    </fragment>
...
                                                <rect key="frame" x="8" y="15" width="704" height="40"/>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="704" id="Z61-Pk-zjj"/>
                                                </constraints>
                                                <attributedString key="attributedText">
                                                    <fragment content="Popular Songs">
                                                        <attributes>
                                                            <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            <font key="NSFont" size="24" name="SFCompactText-Bold"/>
                                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                        </attributes>
                                                    </fragment>
...
