...
////                        albumArtUrl: "dummyAlbum",
////                        albumTracks: songs))
//                }
//            }
//        }
        
//        favouriteList[0].artistName = "Linkin Park"
//        favouriteList[1].artistName = "Taylor Swift"
//        favouriteList[2].artistName = "12 Stones"
    }
}

