...
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wU2-S0-yYU">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MND-d6-lC2">
                                                <rect key="frame" x="372" y="12" width="34" height="30"/>
                                                <state key="normal" image="search"/>
                                                <connections>
                                                    <action selector="searchArtist" destination="BYZ-38-t0r" eventType="touchUpInside" id="86h-xV-wXy"/>
                                                </connections>
                                            </button>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" borderStyle="roundedRect" placeholder="Search Artist" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="e9s-UI-F6J">
                                                <rect key="frame" x="8" y="12" width="322" height="30"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                        </subviews>
...
                                                                                <constraints>
                                                                                    <constraint firstAttribute="height" constant="30" id="AHT-5T-CV0"/>
                                                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="IFu-Zi-l0v"/>
                                                                                    <constraint firstAttribute="width" constant="30" id="LKR-Xc-9qi"/>
                                                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="a5i-24-V2v"/>
                                                                                </constraints>
                                                                                <state key="normal" image="info"/>
                                                                                <connections>
                                                                                    <segue destination="HNB-HM-Qp2" kind="presentation" identifier="HomeToInfoSegue" id="8B3-Mb-aTn"/>
                                                                                </connections>
                                                                            </button>
                                                                        </subviews>
                                                                    </stackView>
...
                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LTt-pK-uXV">
                                <rect key="frame" x="0.0" y="677.66666666666663" width="414" height="58.333333333333371"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="58.329999999999998" id="HHS-La-uIF"/>
                                    <constraint firstAttribute="width" constant="414" id="nxy-vm-TbT"/>
                                </constraints>
                                <state key="normal" title="Close"/>
                                <connections>
                                    <action selector="closeArtistInfo" destination="HNB-HM-Qp2" eventType="touchUpInside" id="DLr-Nf-KX4"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
