...
        }
    })
    alert.addAction(action)
    viewController.present(alert, animated: true, completion: nil)
}
func showEmptySearchAlertDialog(viewController: UIViewController) {
    let alert = UIAlertController(title: "Empty Search",
                                  message: "Seach field is empty - Please enter an artist's name.",
                                  preferredStyle: .alert)
    let action = UIAlertAction(title: "Ok", style: .default, handler: nil)
    alert.addAction(action)
    viewController.present(alert, animated: true, completion: nil)
}
func showCouldNotLoadSongError(viewController: UIViewController) {
    let alert = UIAlertController(title: "Empty song details",
                                  message: "Could not load Song details - Please retry",
...
