...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login-->
        <scene sceneID="dAa-8C-cHV">
            <objects>
                <viewController storyboardIdentifier="LoginScreen" title="Login" useStoryboardIdentifierAsRestorationIdentifier="YES" id="SDF-iv-JBU" customClass="LoginViewController" customModule="KeepUp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="wVK-dE-Yre">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8pK-jJ-G9Y">
                                <rect key="frame" x="0.0" y="0.0" width="415" height="716"/>
...
